# rag-bot

./: .env.company.example  .env.example  .gitignore  AGENTS.md  README.md  app.py  pyproject.toml  requirements-company.txt  requirements-open-core.txt  requirements-slack.txt  requirements.txt
boxer/: _module_compat.py
boxer/adapters/: factory.py  slack.py
boxer/adapters/common/: slack.py
boxer/company/: __init__.py  notion_links.py  notion_playbooks.py  prompt_security.py  retrieval_rules.py  settings.py  team_chat_context.py  utils.py
boxer/core/: llm.py  retrieval_synthesis.py  settings.py  thread_context.py  utils.py
boxer/routers/common/: db.py  (+7 more)
boxer_adapter_slack/: __init__.py  common.py  company.py  factory.py  fun.py  runtime.py  sample.py  settings.py
boxer_adapter_web/: README.md  package.json
boxer_adapter_web/src/: README.md
boxer_company/: notion_links.py  notion_playbooks.py  prompt_security.py  retrieval_rules.py  team_chat_context.py  utils.py
boxer_company/routers/: app_user.py  barcode_log.py  box_db.py  device_file_probe.py  mda_graphql.py  recording_failure_analysis.py  request_log_query.py  s3_domain.py  usage_help.py
boxer_company_adapter_slack/: company.py  fun.py
examples/custom_adapter/: README.md
scripts/: deploy_ec2.sh  smoke_sample_adapter.sh  verify_open_core_boundary.sh  verify_usage_examples.py
tests/: test_company_module_compat.py  test_llm_health.py  test_notion_followup_routing.py  test_prompt_security.py  test_request_log.py  test_team_chat_context.py
widget/: README.md  package.json
widget/src/: README.md
(+16 files in other folders)
